--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.9",
     "@angular/router": "^15.2.9",
+    "@ngneat/transloco": "^4.2.2",
     "bootstrap": "^5.1.1",
     "jquery": "^3.6.0",
     "ngx-toastr": "^16.2.0",
