--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "importHelpers": true,
     "resolveJsonModule": true,
     "module": "es2020",
+    "skipLibCheck": true,
     "strictPropertyInitialization": false,
     "lib": [
       "es2018",
